Contact card switch justify content from right to flex end to fix mobile ios issue and added more margin top for icon ul on small mobile

--- a/src/scss/contactPopUp.scss
+++ b/src/scss/contactPopUp.scss
@@ -30,7 +30,7 @@
 
   .contactCard {
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     align-items: center;
     position: relative;
     width: 75vw;
@@ -191,7 +191,7 @@
           h1 {}
       
           ul {
-      
+              height: calc(100% - 8rem);
             .iconTextContainer {
               .iconAnchor {}
       
